k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: voooice
  labels:
    app.kubernetes.io/part-of: vocaltext
    app.kubernetes.io/managed-by: kustomize
